[package]
name = "project3"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.7"
smartcore = "0.2.0"
serde = "1.0.136"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

